{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 546,
  "lineage": "164b8c3b-b5ba-fd14-a742-a8b98f9216c2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04aadf8c09846e514",
            "association_id": "eipassoc-0687910c4a0f936d6",
            "domain": "vpc",
            "id": "eipalloc-04aadf8c09846e514",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00aa4d3d170619b99",
            "private_dns": "ip-10-0-1-198.ec2.internal",
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-52-23-12-178.compute-1.amazonaws.com",
            "public_ip": "52.23.12.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "soley-nat-eip"
            },
            "tags_all": {
              "Name": "soley-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "soley-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334814200291:internet-gateway/igw-062bfae8cc0a9ae16",
            "id": "igw-062bfae8cc0a9ae16",
            "owner_id": "334814200291",
            "tags": {
              "Name": "soley-internet-gateway"
            },
            "tags_all": {
              "Name": "soley-internet-gateway"
            },
            "vpc_id": "vpc-073e47d74c31412c8"
          },
          "dependencies": [
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "soley_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04aadf8c09846e514",
            "association_id": "eipassoc-0687910c4a0f936d6",
            "connectivity_type": "public",
            "id": "nat-0a2c773a43a483851",
            "network_interface_id": "eni-00aa4d3d170619b99",
            "private_ip": "10.0.1.198",
            "public_ip": "52.23.12.178",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c9ba92605fe35276",
            "tags": {
              "Name": "soley-nat-gateway"
            },
            "tags_all": {
              "Name": "soley-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.soley-public-subnet-1",
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "soley-private-nat-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d77a86749c89aad11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a2c773a43a483851",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d77a86749c89aad1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.soley_nat_gw",
            "aws_route_table.soley-private-route-table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "soley-private-subnet2-nat-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d77a86749c89aad11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a2c773a43a483851",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d77a86749c89aad1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.soley_nat_gw",
            "aws_route_table.soley-private-route-table",
            "aws_subnet.soley-public-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "soley-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-062bfae8cc0a9ae16",
            "id": "r-rtb-072650e574152c7281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-072650e574152c728",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.soley-igw",
            "aws_route_table.soley-public-route-table",
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "soley-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334814200291:route-table/rtb-0d77a86749c89aad1",
            "id": "rtb-0d77a86749c89aad1",
            "owner_id": "334814200291",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2c773a43a483851",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "soley-private-route-table"
            },
            "tags_all": {
              "Name": "soley-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-073e47d74c31412c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "soley-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334814200291:route-table/rtb-072650e574152c728",
            "id": "rtb-072650e574152c728",
            "owner_id": "334814200291",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062bfae8cc0a9ae16",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "soley-public-route-table"
            },
            "tags_all": {
              "Name": "soley-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-073e47d74c31412c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "soley-private-route-table-associate-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d97a8b770253368",
            "route_table_id": "rtb-0d77a86749c89aad1",
            "subnet_id": "subnet-07db7f16fd039296c"
          },
          "dependencies": [
            "aws_route_table.soley-private-route-table",
            "aws_subnet.soley-private-subnet-1",
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "soley-private-route-table-associate-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a02ff7f585818b36",
            "route_table_id": "rtb-0d77a86749c89aad1",
            "subnet_id": "subnet-0130edd01b5fc0d9c"
          },
          "dependencies": [
            "aws_route_table.soley-private-route-table",
            "aws_subnet.soley-private-subnet-2",
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "soley-public-route-table-associate-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b92bff34fda094e",
            "route_table_id": "rtb-072650e574152c728",
            "subnet_id": "subnet-0c9ba92605fe35276"
          },
          "dependencies": [
            "aws_route_table.soley-public-route-table",
            "aws_subnet.soley-public-subnet-1",
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "soley-public-route-table-associate-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bce2e9311ce12a6",
            "route_table_id": "rtb-072650e574152c728",
            "subnet_id": "subnet-054d2321a3237aac6"
          },
          "dependencies": [
            "aws_route_table.soley-public-route-table",
            "aws_subnet.soley-public-subnet-2",
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334814200291:security-group/sg-02c75c2482236351d",
            "description": "Security group for the Soley RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c75c2482236351d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "soley-rds-sg",
            "name_prefix": "",
            "owner_id": "334814200291",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Soley RDS Security Group"
            },
            "tags_all": {
              "Name": "Soley RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-073e47d74c31412c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "soley-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334814200291:subnet/subnet-07db7f16fd039296c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07db7f16fd039296c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334814200291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soley-private-subnet-1"
            },
            "tags_all": {
              "Name": "soley-private-subnet-1"
            },
            "vpc_id": "vpc-073e47d74c31412c8"
          },
          "dependencies": [
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "soley-private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334814200291:subnet/subnet-0130edd01b5fc0d9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0130edd01b5fc0d9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "334814200291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soley-private-subnet-2"
            },
            "tags_all": {
              "Name": "soley-private-subnet-2"
            },
            "vpc_id": "vpc-073e47d74c31412c8"
          },
          "dependencies": [
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "soley-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334814200291:subnet/subnet-0c9ba92605fe35276",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9ba92605fe35276",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334814200291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soley-public-subnet-1"
            },
            "tags_all": {
              "Name": "soley-public-subnet-1"
            },
            "vpc_id": "vpc-073e47d74c31412c8"
          },
          "dependencies": [
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "soley-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334814200291:subnet/subnet-054d2321a3237aac6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054d2321a3237aac6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "334814200291",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "soley-public-subnet-2"
            },
            "tags_all": {
              "Name": "soley-public-subnet-2"
            },
            "vpc_id": "vpc-073e47d74c31412c8"
          },
          "dependencies": [
            "aws_vpc.soley"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "soley",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:334814200291:vpc/vpc-073e47d74c31412c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f87d669b17c3e57c",
            "default_route_table_id": "rtb-0d570d190f2ac0d82",
            "default_security_group_id": "sg-013c47cedca8f12fe",
            "dhcp_options_id": "dopt-054f447aa3024fc13",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-073e47d74c31412c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d570d190f2ac0d82",
            "owner_id": "334814200291",
            "tags": {
              "Name": "soley"
            },
            "tags_all": {
              "Name": "soley"
            }
          }
        }
      ]
    }
  ]
}